--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 
 <body>
     <div id='calculator'>
-        <div class='container' id='display'></div>
-        <button class='buttons' id='btnclr' type='button'>Clear</button>
-        <button class='buttons' id='btnmin'>-</button>
-        <button class='buttons' id='btnplus'>+</button>
-        <button class='buttons' id='btnplusmin'>+/-</button>
-        <button class='buttons' id='btn1'>1</button>
-        <button class='buttons' id='btn2'>2</button>
-        <button class='buttons' id='btn3'>3</button>
-        <button class='buttons' id='btnmultiply'>*</button>
-        <button class='buttons' id='btn4'>4</button>
-        <button class='buttons' id='btn5'>5</button>
-        <button class='buttons' id='btn6'>6</button>
-        <button class='buttons' id='btndiv'>/</button>
-        <button class='buttons' id='btn7'>7</button>
-        <button class='buttons' id='btn8'>8</button>
-        <button class='buttons' id='btn9'>9</button>
-        <button class='buttons' id='btnequal'>=</button>
-        <button class='buttons' id='btn0'>0</button>
-        <button class='buttons' id='btndot'>.</button>
+        <div class='display' id='display'>123456999</div>
+        <button class='buttons' id='btnclr' type='button'>A/C</button>
+        <button class='buttons' id='btnmin' type='button'>-</button>
+        <button class='buttons' id='btnplus'type='button'>+</button>
+        <button class='buttons' id='btnplusmin' type='button'>+/-</button>
+        <button class='buttons' id='btn1' type='button'>1</button>
+        <button class='buttons' id='btn2' type='button'>2</button>
+        <button class='buttons' id='btn3' type='button'>3</button>
+        <button class='buttons' id='btnmultiply'type='button'>*</button>
+        <button class='buttons' id='btn4' type='button'>4</button>
+        <button class='buttons' id='btn5' type='button'>5</button>
+        <button class='buttons' id='btn6' type='button'>6</button>
+        <button class='buttons' id='btndiv'type='button'>/</button>
+        <button class='buttons' id='btn7' type='button'>7</button>
+        <button class='buttons' id='btn8' type='button'>8</button>
+        <button class='buttons' id='btn9' type='button'>9</button>
+        <button class='buttons' id='btnequal'type='button'>=</button>
+        <button class='buttons' id='btn0' type='button'>0</button>
+        <button class='buttons' id='btndot'type='button'>.</button>
     </div>
 </body>
 <footer></footer>
