--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <script src="calc.js"></script>
     <link rel="stylesheet" href="calc.css">
 </head>
 
@@ -11,9 +10,9 @@
 </header>
 
 <body>
-    <div id='calculator'>
-        <div class='display' id='display'>123456999</div>
-        <button class='buttons' id='btnclr' type='button'>A/C</button>
+    <div id="calculator">
+        <div class='display' id='display'>0</div>
+        <button class='buttons' id='btnclr' >A/C</button>
         <button class='buttons' id='btnmin' type='button'>-</button>
         <button class='buttons' id='btnplus'type='button'>+</button>
         <button class='buttons' id='btnplusmin' type='button'>+/-</button>
@@ -33,6 +32,7 @@
         <button class='buttons' id='btndot'type='button'>.</button>
     </div>
 </body>
+<script src="calc.js"></script>
 <footer></footer>
 
 </html>
